[package]
name = "rust_bilidown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
inquire = "0.6.2"
fancy-regex = "0.11.0"
serde = { version = "1.0.190", features = ["derive"] }
colored = "2.0.4"

[profile.release]
lto = true
strip = true
